# camera_calibration

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yml
bilberry/: CMakeLists.txt
bilberry/src/: CMakeLists.txt  main.cpp
bilberry/src/calibration/include/: Calibration.hpp  CameraManager.hpp  CameraParameters.hpp  ICameraManager.hpp  IImageManager.hpp  ImageManager.hpp  Utility.hpp
bilberry/src/calibration/src/: CMakeLists.txt  Calibration.cpp  CameraManager.cpp  Utility.cpp
bilberry/test/gtest/calibration-test/include/: MockCameraManager.hpp
bilberry/test/gtest/calibration-test/src/: CMakeLists.txt  CalibrationTest.cpp  CameraManagerTest.cpp  ImageManagerTest.cpp  UtilityTest.cpp
calibration/configurations/: camera-configuration.json
calibration/data/: image-points.json
calibration/schema/: image-point-schema.json
camera_calibration/: .clang-format  CMakeLists.txt
camera_calibration/src/: CMakeLists.txt
camera_calibration/src/calibration/include/: ICameraManager.hpp
camera_calibration/src/calibration/src/: Calibration.cpp  ImageManager.cpp
camera_calibration/test/gtest/calibration-test/include/: MockImageManager.hpp  UtilityTest.hpp
massy/: .clang-format  CMakeLists.txt
massy/src/: CMakeLists.txt  main.cpp
massy/src/massy/include/communication/: Connection.hpp  Server.hpp
massy/src/massy/src/: CMakeLists.txt
massy/src/massy/src/communication/: CMakeLists.txt  Connection.cpp  Server.cpp
massy/test/gtest/: CMakeLists.txt
massy/test/gtest/massy-test/src/: CMakeLists.txt
scripts/: build.sh  run.sh  test.sh
src/: CMakeLists.txt  main.cpp
src/calibration/include/: Calibration.hpp  CameraConfiguration.hpp  CameraManager.hpp  CameraParameters.hpp  ICameraConfiguration.hpp  ICameraManager.hpp  ImageManager.hpp  Utility.hpp
src/calibration/src/: CMakeLists.txt  Calibration.cpp  CameraConfiguration.cpp  CameraManager.cpp  ImageManager.cpp  Utility.cpp
test/gtest/: CMakeLists.txt
test/gtest/CalibrationTest/: CMakeLists.txt  CalibrationTest.cpp
test/gtest/CalibrationTest/include/: MockCameraConfiguration.hpp  MockCameraManager.hpp  MockImageManager.hpp
test/gtest/CalibrationTest/src/: CMakeLists.txt  CalibrationTest.cpp  CameraManagerTest.cpp  ImageManagerTest.cpp
test/gtest/calibration-test/include/: MockCameraManager.hpp  Utility.hpp
test/gtest/calibration-test/src/: CalibrationTest.cpp  CameraManagerTest.cpp  ImageManagerTest.cpp  Utility.cpp
